--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>spring</servlet-name>
-        <url-pattern>/spring/*</url-pattern>
+        <url-pattern>/</url-pattern> 
     </servlet-mapping>
 </web-app>
